src/media/management/immich/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: le-ing-prd
    ingress.cilium.io/loadbalancer-mode: shared
    ingress.cilium.io/request-timeout: "36000"
spec:
  ingressClassName: cilium
  rules:
    - host: immich.jcan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - immich.jcan.dev
      secretName: immich-tls
